--- a/lesson3/lesson3_student.rmd
+++ b/lesson3/lesson3_student.rmd
@@ -12,7 +12,11 @@ Notes:
 Notes:
 
 ```{r Pseudo-Facebook User Data}
-
+getwd()
+setwd('~/Udacity/Data Analysis with R/lesson3/')
+list.files()
+pf <- read.csv('pseudo_facebook.tsv', sep = '\t')
+names(pf)
 ```
 
 ***
@@ -21,35 +25,40 @@ Notes:
 Notes:
 
 ```{r Histogram of Users\' Birthdays}
-install.packages('ggplot2')
+#install.packages('ggplot2')
 library(ggplot2)
+
+names(pf)
+qplot(data = pf, x = dob_day) +
+  scale_x_discrete(breaks=1:31)
+
 ```
 
 ***
 
 #### What are some things that you notice about this histogram?
-Response:
+Response: The count of dob_day = 1 seems to be a large outlier.  The count of dob_day = 31 seems to be relatively small, but not ever month has 31 days, so this seems reasonable.
 
 ***
 
 ### Moira's Investigation
-Notes:
+Notes: Users underestimated their audience, guessing a quarter of the actual audience size
 
 ***
 
 ### Estimating Your Audience Size
-Notes:
+Notes: 
 
 ***
 
 #### Think about a time when you posted a specific message or shared a photo on Facebook. What was it?
-Response:
+Response: A status about going down a YouTube video rabbit hole
 
 #### How many of your friends do you think saw that post?
-Response:
+Response: 100
 
 #### Think about what percent of your friends on Facebook see any posts or comments that you make in a month. What percent do you think that is?
-Response:
+Response: 20
 
 ***
 
@@ -61,11 +70,14 @@ Notes:
 Notes:
 
 ```{r Faceting}
-
+ggplot(data = pf, aes(x = dob_day)) +
+  geom_histogram() +
+  scale_x_discrete(breaks = 1:31) +
+  facet_wrap(~dob_month)
 ```
 
 #### Let’s take another look at our plot. What stands out to you here?
-Response:
+Response: It appears this high count of dob_day = 1 occurs when dob_month = 1.  This is in line with the assertion that the default birthday presented to the user is January 1st.
 
 ***
 
@@ -75,9 +87,9 @@ Notes:
 ***
 
 ### Moira's Outlier
-Notes:
+Notes: 
 #### Which case do you think applies to Moira’s outlier?
-Response:
+Response: Bad data about an extreme case
 
 ***
 
@@ -87,11 +99,12 @@ Notes:
 #### What code would you enter to create a histogram of friend counts?
 
 ```{r Friend Count}
-
+ggplot(data = pf, aes(x = friend_count)) +
+  geom_histogram()
 ```
 
 #### How is this plot similar to Moira's first plot?
-Response:
+Response: A large portion of the data is in a small bin
 
 ***
 
@@ -116,7 +129,8 @@ Notes:
 # Add it to the code below.
 qplot(x = friend_count, data = pf, binwidth = 10) +
   scale_x_continuous(limits = c(0, 1000),
-                     breaks = seq(0, 1000, 50))
+                     breaks = seq(0, 1000, 50)) +
+  facet_wrap(~gender)
 ```
 
 ***
@@ -125,7 +139,10 @@ qplot(x = friend_count, data = pf, binwidth = 10) +
 Notes:
 
 ```{r Omitting NA Values}
-
+qplot(x = friend_count, data = subset(pf, !is.na(gender)), binwidth = 10) +
+  scale_x_continuous(limits = c(0, 1000),
+                     breaks = seq(0, 1000, 50)) +
+  facet_wrap(~gender)
 ```
 
 ***
@@ -134,17 +151,19 @@ Notes:
 Notes:
 
 ```{r Statistics \'by\' Gender}
+table(pf$gender)
 
+by(pf$friend_count, pf$gender, summary)
 ```
 
 #### Who on average has more friends: men or women?
-Response:
+Response: women
 
 #### What's the difference between the median friend count for women and men?
-Response:
+Response: 22
 
 #### Why would the median be a better measure than the mean?
-Response:
+Response: Less susceptible to outliers
 
 ***
 
@@ -152,7 +171,8 @@ Response:
 Notes:
 
 ```{r Tenure}
-
+ggplot(aes(x = tenure), data = pf) + 
+   geom_histogram(binwidth = 30, color = 'black', fill = '#099DD9')
 ```
 
 ***
@@ -160,7 +180,12 @@ Notes:
 #### How would you create a histogram of tenure by year?
 
 ```{r Tenure Histogram by Year}
-
+ggplot(aes(x = tenure/365), data = pf) + 
+  geom_histogram(binwidth = 0.25, color = 'black', fill = '#F79420') +
+  scale_x_continuous(breaks = seq(1, 7, 1), lim = c(0, 7)) +
+  xlab('Number of years using Facebook') + 
+  ylab('Number of users in sample')
+  
 ```
 
 ***
@@ -178,7 +203,8 @@ Notes:
 Notes:
 
 ```{r User Ages}
-
+ggplot(data = pf, aes(x = age)) +
+  geom_histogram()
 ```
 
 #### What do you notice?
@@ -205,7 +231,17 @@ Notes:
 Notes:
 
 ```{r Add a Scaling Layer}
+library(gridExtra) 
+library(ggplot2)
 
+p1 = ggplot(data = pf, aes(x = friend_count)) +
+      geom_histogram()
+
+p2 = p1 + scale_x_log10()
+
+p3 = p1 + scale_x_sqrt()
+
+grid.arrange(p1, p2, p3, ncol = 1)
 ```
 
 ***
@@ -214,7 +250,12 @@ Notes:
 ### Frequency Polygons
 
 ```{r Frequency Polygons}
-
+ggplot(aes(x = www_likes, y = ..count../sum(..count..)), data = subset(pf, !is.na(gender))) +
+  geom_freqpoly(aes(color = gender)) + 
+  scale_x_continuous(limits = c(0, 1000), breaks = seq(0, 1000, 50)) +
+  scale_x_log10() + 
+  xlab('www_likes') + 
+  ylab('Percentage of users with that many www_likes')
 ```
 
 ***
@@ -223,7 +264,7 @@ Notes:
 Notes:
 
 ```{r Likes on the Web}
-
+by(pf$www_likes, pf$gender, sum)
 ```
 
 
@@ -233,13 +274,23 @@ Notes:
 Notes:
 
 ```{r Box Plots}
-
+ggplot(data = subset(pf, !is.na(gender)), aes(x=gender, y=friend_count)) +
+  geom_boxplot()
 ```
 
 #### Adjust the code to focus on users who have friend counts between 0 and 1000.
-
+Notes: This method removes data, changing the percentile calculations
 ```{r}
+ggplot(data = subset(pf, !is.na(gender)), aes(x=gender, y=friend_count)) +
+  geom_boxplot() +
+  scale_y_continuous(limits=c(0,1000))
+```
 
+Notes: This method does not remove data, and simply zooms the graph
+```{r}
+ggplot(data = subset(pf, !is.na(gender)), aes(x=gender, y=friend_count)) +
+  geom_boxplot() +
+  coord_cartesian(ylim=c(0,1000))
 ```
 
 ***
@@ -248,7 +299,11 @@ Notes:
 Notes:
 
 ```{r Box Plots, Quartiles, and Friendships}
+ggplot(data = subset(pf, !is.na(gender)), aes(x=gender, y=friend_count)) +
+  geom_boxplot() +
+  coord_cartesian(ylim=c(0,250))
 
+by(pf$friend_count, pf$gender, summary)
 ```
 
 #### On average, who initiated more friendships in our sample: men or women?
@@ -256,7 +311,12 @@ Response:
 #### Write about some ways that you can verify your answer.
 Response:
 ```{r Friend Requests by Gender}
+ggplot(data = subset(pf, !is.na(gender)), aes(x=gender, y=friendships_initiated)) +
+  geom_boxplot() +
+  coord_cartesian(ylim=c(0,150))
 
+
+by(pf$friendships_initiated, pf$gender, summary)
 ```
 
 Response:
@@ -267,7 +327,12 @@ Response:
 Notes:
 
 ```{r Getting Logical}
+pf$mobile_check_in <- NA
+pf$mobile_check_in <- ifelse(pf$mobile_likes > 0, 1, 0)
+pf$mobile_check_in <- factor(pf$mobile_check_in)
+summary(pf$mobile_check_in)
 
+sum(pf$mobile_check_in == 1)/length(pf$mobile_check_in)
 ```
 
 Response:
