--- a/lesson4/lesson4_student.rmd
+++ b/lesson4/lesson4_student.rmd
@@ -12,7 +12,10 @@ Notes:
 Notes:
 
 ```{r Scatterplots}
+library(ggplot2)
+pf <- read.csv('pseudo_facebook.tsv', sep = '\t')
 
+qplot(x = age, y = friend_count, data = pf)
 ```
 
 ***
@@ -26,7 +29,11 @@ Response:
 Notes:
 
 ```{r ggplot Syntax}
+ggplot(aes(x = age, y = friend_count), data = pf) +
+  geom_point() +
+  xlim(13, 90)
 
+summary(pf$age)
 ```
 
 ***
@@ -35,7 +42,9 @@ Notes:
 Notes:
 
 ```{r Overplotting}
-
+ggplot(aes(x = age, y = friend_count), data = pf) +
+  geom_jitter(alpha = 1/20) +
+  xlim(13, 90)
 ```
 
 #### What do you notice in the plot?
@@ -47,13 +56,16 @@ Response:
 Notes:
 
 ```{r Coord_trans()}
-
+?coord_trans
 ```
 
 #### Look up the documentation for coord_trans() and add a layer to the plot that transforms friend_count using the square root function. Create your plot!
 
 ```{r}
-
+ggplot(aes(x = age, y = friend_count), data = pf) +
+  geom_point(alpha = 1/20, position = position_jitter(h = 0)) +
+  xlim(13, 90) +
+  coord_trans(y = "sqrt")
 ```
 
 #### What do you notice?
@@ -64,7 +76,10 @@ Notes:
 Notes:
 
 ```{r Alpha and Jitter}
-
+ggplot(aes(x = age, y = friendships_initiated), data = pf) +
+  geom_point(alpha = 1/20, position = position_jitter(h = 0)) +
+  xlim(13, 90) +
+  coord_trans(y = "sqrt")
 ```
 
 ***
@@ -78,7 +93,21 @@ Notes:
 Notes:
 
 ```{r Conditional Means}
+install.packages('dplyr')
+library(dplyr)
 
+age_groups <- group_by(pf, age)
+pf.fc_by_age <- summarise(age_groups,
+                          friend_count_mean = mean(friend_count),
+                          friend_count_median = median(friend_count),
+                          n = n())
+pf.fc_by_age <- arrange(pf.fc_by_age, age)
+
+pf.fc_by_age_chained <- pf %>% group_by(age) %>% 
+                        summarise(friend_count_mean = mean(friend_count),
+                                  friend_count_median = median(friend_count),
+                                  n = n()) %>%
+                        arrange(age)
 ```
 
 Create your plot!
