Completed through lesson 5 prices over time

--- a/lesson5/lesson5_student.rmd
+++ b/lesson5/lesson5_student.rmd
@@ -32,6 +32,7 @@ pf.fc_by_age_gender <- pf %>%
 Notes:
 
 ```{r Plotting Conditional Summaries}
+library(ggplot2)
 ggplot(aes(x = age, y = median_friend_count, color = gender), data = pf.fc_by_age_gender) + geom_line()
 ```
 
@@ -74,7 +75,7 @@ ggplot(aes(x = age, y = ratio), data = pf.fc_by_age_gender.wide) +
 Notes:
 
 ```{r Third Quantitative Variable}
-
+pf$year_joined <- floor(2014 - pf$tenure/365.)
 ```
 
 ***
@@ -83,7 +84,10 @@ Notes:
 Notes:
 
 ```{r Cut a Variable}
+summary(pf$year_joined)
+table(pf$year_joined)
 
+pf$year_joined.bucket <- cut(pf$year_joined, breaks = c(2004, 2009, 2011, 2012, 2014))
 ```
 
 ***
@@ -92,7 +96,13 @@ Notes:
 Notes:
 
 ```{r Plotting it All Together}
+table(pf$year_joined.bucket, useNA = 'ifany')
 
+ggplot(aes(x = age, y = friend_count), 
+       data = subset(pf, !is.na(year_joined.bucket))) +
+  geom_line(aes(color = year_joined.bucket), 
+            stat = 'summary', 
+            fun.y = median)
 ```
 
 ***
@@ -101,7 +111,12 @@ Notes:
 Notes:
 
 ```{r Plot the Grand Mean}
-
+ggplot(aes(x = age, y = friend_count), 
+       data = subset(pf, !is.na(year_joined.bucket))) +
+  geom_line(aes(color = year_joined.bucket), 
+            stat = 'summary', 
+            fun.y = mean) +
+  geom_line(stat = 'summary', fun.y = mean, linetype = 2)
 ```
 
 ***
@@ -110,7 +125,7 @@ Notes:
 Notes:
 
 ```{r Friending Rate}
-
+with(subset(pf, tenure > 0), summary(friend_count/tenure))
 ```
 
 ***
@@ -118,12 +133,14 @@ Notes:
 ### Friendships Initiated
 Notes:
 
-What is the median friend rate?
+What is the median friend rate? 0.2205
 
-What is the maximum friend rate?
+What is the maximum friend rate? 417
 
 ```{r Friendships Initiated}
-
+ggplot(aes(x = tenure, y = friendships_initiated / tenure), 
+       data = subset(pf, tenure > 0)) +
+  geom_line(aes(color = year_joined.bucket), stat = 'summary', fun.y = mean)
 ```
 
 ***
@@ -157,6 +174,9 @@ ggplot(aes(x = 90 * round(tenure / 90), y = friendships_initiated / tenure),
             stat = "summary",
             fun.y = mean)
 
+ggplot(aes(x = 7 * round(tenure / 7), y = friendships_initiated / tenure),
+       data = subset(pf, tenure > 0)) +
+  geom_smooth(aes(color = year_joined.bucket))
 ```
 
 ***
@@ -175,7 +195,14 @@ Notes:
 Notes:
 
 ```{r Histograms Revisited}
+yo <- read.csv('yogurt.csv')
+str(yo)
 
+# Change the id from an int to a factor
+yo$id <- as.factor(yo$id)
+str(yo)
+
+ggplot(aes(x = price), data = yo) + geom_histogram()
 ```
 
 ***
